# PlataformasSorteosYRifas

./: .env.example  .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml  release.yml
apps/admin-android/: build.gradle.kts  settings.gradle.kts
apps/admin-android/app/: build.gradle.kts  proguard-rules.pro
apps/admin-windows/: package.json
apps/admin-windows/src/: index.html  main.js  styles.css
apps/admin-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-windows/src-tauri/icons/: icon.icns
apps/admin-windows/src-tauri/src/: lib.rs  main.rs
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/seller-android/: settings.gradle.kts
apps/seller-android/app/: build.gradle.kts
apps/seller-web/src/: index.html  main.js  styles.css
apps/web/: package-lock.json  package.json
apps/web/app/: Countdown.jsx  globals.css  layout.js  page.js
apps/web/lib/: rifas.js
docs/: DEPLOY.md  Guia.md
examples/sorteo-demo/public/: numbers.json  raffle.json
execution/: gen_icons.py  validate-schema.py
infra/: README.md
services/backend/: README.md  package-lock.json  package.json  vercel.json
services/backend/api/: [...path].js  index.js
services/backend/migrations/: 001_init.sql  002_auth.sql  003_rate_limit.sql  004_media.sql  005_pagos_manuales.sql  006_responsable.sql  007_ciudad.sql  008_vendedores.sql  009_ordenes.sql
services/backend/src/: app.js  auth.js  config.js  create-admin.js  crypto-utils.js  email.js  http-error.js  legal.js  migrate.js  payments.js  (+7 more)
(+29 files in other folders)
