[package]
name = "sorteos-rifas-admin"
version = "0.1.0"
description = "App de administracion de Sorteos y Rifas"
authors = ["jhonsu01"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sorteos_rifas_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
